insert Credit Card unit test and integration test
