# src/main/java/hr/rba/creditcardprint/request/RequestPrintServiceImpl.java
@@ -4,6 +4,7 @@ package hr.rba.creditcardprint.request;
 import hr.rba.creditcardprint.data.CreditCard;
 import hr.rba.creditcardprint.data.CreditCardRepository;
 import hr.rba.creditcardprint.data.Status;
+import hr.rba.creditcardprint.openapi.model.CreditCardPrintDetailsDto;
 import hr.rba.creditcardprint.openapi.model.CreditCardPrintInsertDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -28,9 +29,9 @@ public class RequestPrintServiceImpl implements RequestPrintService {
     }
 
     @Override
-    public void requestForPrint(final CreditCardPrintInsertDto insertDto) {
+    public CreditCardPrintDetailsDto requestForPrint(final CreditCardPrintInsertDto insertDto) {
         CreditCard creditCard = this.mapper.dtoToEntity(insertDto);
         creditCard.setStatus(Status.NO_ACTIVE);
-        repository.save(creditCard);
+        return this.mapper.entityToDetailsDto(repository.save(creditCard));
     }
 }
